[gd_scene load_steps=22 format=3 uid="uid://cl72ugeo24m3h"]

[ext_resource type="Script" path="res://scenes/game_object/enemies/wizard_enemy/wizard_enemy.gd" id="1_i2toe"]
[ext_resource type="PackedScene" uid="uid://8sls76pvcyy2" path="res://scenes/component/health_component.tscn" id="1_xb67g"]
[ext_resource type="PackedScene" uid="uid://0lvao7d60pio" path="res://scenes/component/vial_drop_component.tscn" id="2_rkb8w"]
[ext_resource type="PackedScene" uid="uid://boqkssff6bg7r" path="res://scenes/component/velocity_component.tscn" id="3_6rvl8"]
[ext_resource type="PackedScene" uid="uid://cxata0s0mr3f5" path="res://scenes/component/death_component.tscn" id="4_d8nrf"]
[ext_resource type="PackedScene" uid="uid://bcrxdcei2bg5s" path="res://scenes/component/hurtbox_component.tscn" id="5_5yowy"]
[ext_resource type="PackedScene" uid="uid://btr53sivjqjcl" path="res://scenes/component/hit_flash_component.tscn" id="5_y66wu"]
[ext_resource type="Shader" path="res://scenes/component/hit_flash_component_material.gdshader" id="6_ejijb"]
[ext_resource type="Texture2D" uid="uid://cc4hel14sp76s" path="res://scenes/game_object/enemies/wizard_enemy/wizard.png" id="6_fe4jw"]
[ext_resource type="PackedScene" uid="uid://b2kw61u05fdqe" path="res://scenes/component/random_audio_stream_player_2d.tscn" id="8_7gp2t"]
[ext_resource type="AudioStream" uid="uid://doxc3f6ikkjsr" path="res://assets/audio/footstep_carpet_000.ogg" id="9_ahoii"]
[ext_resource type="AudioStream" uid="uid://lsxblpmhtgq2" path="res://assets/audio/footstep_carpet_001.ogg" id="10_yk5y5"]
[ext_resource type="AudioStream" uid="uid://cld8rucvfpfu3" path="res://assets/audio/footstep_carpet_002.ogg" id="11_o3uwa"]
[ext_resource type="AudioStream" uid="uid://bfpo3gl4685hn" path="res://assets/audio/footstep_carpet_003.ogg" id="12_j5el6"]
[ext_resource type="AudioStream" uid="uid://mmt86gqkb14v" path="res://assets/audio/footstep_carpet_004.ogg" id="13_4a8k1"]

[sub_resource type="Animation" id="Animation_g1mcx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_r1od5"]
resource_name = "walk"
length = 0.7
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.5),
"transitions": PackedFloat32Array(1, 2.37841, 1),
"update": 0,
"values": [0.0, -0.261799, 0.261799]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite2D:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 1), Vector2(1.5, 0.7), Vector2(0.8, 1.2)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.1, 0.5),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [true],
"method": &"@is_moving_setter"
}, {
"args": [false],
"method": &"@is_moving_setter"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1mmug"]
_data = {
"RESET": SubResource("Animation_g1mcx"),
"walk": SubResource("Animation_r1od5")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qf1io"]
resource_local_to_scene = true
shader = ExtResource("6_ejijb")
shader_parameter/lerp_percent = null

[sub_resource type="CircleShape2D" id="CircleShape2D_j1xt4"]

[sub_resource type="CircleShape2D" id="CircleShape2D_6jggm"]
radius = 5.0

[node name="WizardEnemy" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 8
collision_mask = 9
script = ExtResource("1_i2toe")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1mmug")
}
autoplay = "walk"

[node name="HealthComponent" parent="." instance=ExtResource("1_xb67g")]

[node name="VialDropComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("2_rkb8w")]
health_component = NodePath("../HealthComponent")

[node name="VelocityComponent" parent="." instance=ExtResource("3_6rvl8")]
max_speed = 50

[node name="HitFlashComponent" parent="." node_paths=PackedStringArray("sprite", "health_component") instance=ExtResource("5_y66wu")]
sprite = NodePath("../Visuals/Sprite2D")
health_component = NodePath("../HealthComponent")
hit_flash_material = SubResource("ShaderMaterial_qf1io")

[node name="DeathComponent" parent="." node_paths=PackedStringArray("health_component", "sprite") instance=ExtResource("4_d8nrf")]
health_component = NodePath("../HealthComponent")
sprite = NodePath("../Visuals/Sprite2D")

[node name="HitRandomAudioStreamPlayer2D" parent="." instance=ExtResource("8_7gp2t")]
stream_array = Array[AudioStream]([ExtResource("9_ahoii"), ExtResource("10_yk5y5"), ExtResource("11_o3uwa"), ExtResource("12_j5el6"), ExtResource("13_4a8k1")])

[node name="HurtboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("5_5yowy")]
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
position = Vector2(0, -8)
shape = SubResource("CircleShape2D_j1xt4")

[node name="Visuals" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Visuals"]
position = Vector2(0, -4)
texture = ExtResource("6_fe4jw")
offset = Vector2(0, -4)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_6jggm")
